# garmata

./: .gitignore  Cargo.toml  README.md
docs/en/: _readme.md  redirects.md
src/: configuration.rs  http.rs  lib.rs  main.rs
src/http/: cookies.rs  request.rs  response.rs
