[package]
name = "garmata"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
native-tls = "0.2.11"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
trust-dns-resolver = "0.22.0"
url = "2.3.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
